--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,8 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+#include: package:flutter_lints/flutter.yaml
+include: lint_analysis_options.yaml
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -27,3 +28,6 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+analyzer:
+    errors:
+      undefined_identifier: info
